lab-10/deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-pod
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data-mysql-volume
              mountPath: /var/lib/mysql
      volumes: 
        - name: data-mysql-volume
          nfs:
            server: "10.105.197.144"
            path: "/mysql"
