lab-10/service-wordpress.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
